Use easier method to get first entry.